Fix tag overflow mobile page
	modified:   app/assets/stylesheets/mobile/mobile.scss

	modified:   app/assets/stylesheets/mobile/mobile.scss

--- a/app/assets/stylesheets/mobile/mobile.scss
+++ b/app/assets/stylesheets/mobile/mobile.scss
@@ -1204,3 +1204,8 @@ select#aspect_ids_ {
     background-color: $light-green;
   }
 }
+
+/* --- Tag page --- */
+#app #main h1 {
+  word-wrap: break-word;
+}
